# host-manager

./: .gitignore  README.md  build_debug.txt  build_error.txt  components.json  index.html  package-lock.json  package.json  project-documentation.md  tailwind.config.js  vite.config.js
.github/workflows/: release.yml
branding/: README.md
docs/: tauri-updater.md
figma/headerbar/: App.tsx
figma/headerbar/components/: MenuBar.tsx  (+3 more)
figma/tags/: App.tsx  TagCard.tsx  TagModal.tsx  globals.css
src/: App.css  App.jsx  Home.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: external_tools.rs  lib.rs  main.rs  open_here.rs
src-tauri/src/crypto/: encryption.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: group.rs  host.rs  mod.rs  tag.rs
src-tauri/src/pty/: commands.rs  constants.rs  mod.rs
src-tauri/src/shell/: commands.rs  mod.rs  unix.rs  windows.rs
src-tauri/src/ssh/: commands.rs  constants.rs  mod.rs
src-tauri/src/storage/: file_storage.rs
src-tauri/src/ui/: commands.rs
src-tauri/windows/: hooks.nsh
src/Terminal/: DraggableTab.jsx  LayoutGrid.jsx  MainTerminalView.jsx  Pane.jsx  SearchOverlay.jsx  Terminal.jsx  TerminalComponent.jsx  TerminalList.jsx  TerminalManager.jsx  xterm.css
src/context/: FileContext.jsx  GlobalContext.jsx  SSHContext.jsx  TerminalContext.jsx
src/encrypt/: Encrypt.jsx
src/file/: Data.jsx  File.jsx
src/global/: Global.jsx  SetGlobal.jsx
src/hooks/: useAppInitialization.js  useGlobalShortcuts.js
src/lib/: externalTools.js  updater.js
src/ssh/: SSH.jsx  SSHComponent.jsx  ssh.css
src/store/: LoadData.js  SaveData.js
src/stores/: AppVersionConfig.js  ClipboardConfig.js  ConfigData.js  FontConfig.js  LoadData.js  SSHData.js  SaveData.js  SettingsConfig.js  TerminalConfig.js  ThemeConfig.js  index.js  useAppStore.js  useCommandStore.js  useCopyPasteModeStore.js  useHostStore.js  useLayoutStore.js  useModalFixes.js  useModalStore.js  useSSHStore.js  useSplitStore.js  useTabStore.js  useTerminalStore.js  useThemeStore.js
src/titlebar/: Titlebar.jsx
src/utils/: persistence.js
(+56 files in other folders)
